Fixed margin error

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="landpage.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="overall.js"></script>
 </head>
 
 <body>
@@ -19,8 +17,16 @@
         <li><a href="#">About Us</a></li>
       </ul>
       </nav>
+
+    </div>
+    <div id="navMobile">
+            <ul>
+              <li class="active"><a href="#">Active</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+    </div>
     </header>
-  </div>
+
   <main>
     <div id="navMobile">
             <ul>
